# PowerDecompile

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md
include/: BinInst.hh  BinaryContext.hh  CodeWarriorABIConfiguration.hh  Commands.hh  DataSource.hh  DisasmWrite.hh  FlagsEnum.hh  IntervalTree.hh  PpcDisasm.hh  RandomAccessData.hh  RegSet.hh  RegisterBinding.hh  ReservedVector.hh  StackAnalysis.hh  Subroutine.hh  SubroutineGraph.hh
include/dbgutil/: DbgUtilShared.hh  DisasmWrite.hh  Disassembler.hh  GraphVisualizer.hh  IrPrinter.hh
include/hll/: CFAnalyzer.hh  ExprNode.hh  Function.hh  SemanticPreservingStructurizer.hh  Structurizer.hh
include/ir/: GekkoTranslator.hh  IrInst.hh  RegisterBinding.hh
include/ppc/: BinInst.hh  BinaryContext.hh  DataSource.hh  Perilogue.hh  PpcDisasm.hh  RegSet.hh  RegisterBinding.hh  RegisterLiveness.hh  (+4 more)
src/: BinaryContext.cc  CMakeLists.txt  Commands.cc  Commands.hh  DecompMain.cc  DisasmWrite.cc  PpcDisasm.cc  RegisterBinding.cc  StackAnalysis.cc  SubroutineGraph.cc  main.rs
src/analysis/: mod.rs  structurizer.rs
src/dbgutil/: DbgUtilShared.cc  DisasmWrite.cc  Disassembler.cc  Disassembler.hh  GraphVisualizer.cc  IrPrinter.cc
src/hll/: CFAnalyzer.cc  ExprNode.hh  Function.cc  Function.hh  GotoStructurizer.cc  GotoStructurizer.hh  GraphSubstitution.cc  GraphSubstitution.hh  SemanticPreservingStructurizer.cc  SemanticPreservingStructurizer.hh  Structurizer.cc  Structurizer.hh  Untiling.cc  Untiling.hh
src/ir/: GekkoTranslator.cc  GekkoTranslator.hh  IrInst.hh  RegisterBinding.hh  SSATranslator.cc  SSATranslator.hh  mod.rs  pdir.rs
src/ppc/: BinInst.hh  BinaryContext.cc  BinaryContext.hh  CodeWarriorABIConfiguration.hh  DataSource.hh  Perilogue.cc  PpcDisasm.cc  PpcDisasm.hh  RegSet.hh  RegisterBinding.cc  RegisterLiveness.cc  RegisterLiveness.hh  StackAnalysis.cc  SubroutineGraph.cc  SubroutineStack.cc
src/producers/: DolData.cc  DolData.hh  ElfData.cc  RandomAccessData.hh  SectionedData.cc
src/util/: disjointset.rs  graph.rs  mod.rs
src/utl/: Either.hh  FlowGraph.cc  FlowGraph.hh  LaunchCommand.cc  PatternScan.cc
test/: CMakeLists.txt  FlowGraphTest.cc
(+11 files in other folders)
